[package]
name = "obt"
version = "0.1.3"
edition = "2021"
authors = ["OfficialVPN"]
description = "Backup tool for Gitea repositories"

[[bin]]
name = "obt"
path = "main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
colored = "2.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.3"
nix = "0.26"
log = "0.4"
env_logger = "0.10"
